--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build & Push
         uses: ./.github/actions/build_and_push_image
         with:
-          REGISTRY: ${{ env.REGISTRY }}
+          REGISTRY: ${{ secrets.CUSTOM_REGISTRY }}
           REGISTRY_USERNAME: ${{ secrets.CUSTOM_REGISTRY_USERNAME }}
           REGISTRY_PASSWORD: ${{ secrets.CUSTOM_REGISTRY_ACCESS_TOKEN }}
           MODULE: frontend
